corrected footer layout for better dispaly on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,14 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin-bottom: 4rem; 
+}
+
+main {
+  flex: 1;
 }
 
 a {
@@ -52,6 +60,10 @@ p {
     color: rgb(53, 52, 52);
 }
 
+.footer {
+  bottom: 20;
+  width: 100%;
+}
 
 /* Form */
 
